--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "files.associations": {
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "philo.h": "c",
+        "stdlib.h": "c",
+        "stdio.h": "c",
+        "pthread.h": "c",
+        "string.h": "c"
     }
 }
